<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/view_margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email"/>

        <Button
            android:id="@+id/bt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin_normal"
            android:text="@string/text_copy"
            android:textColor="@color/basic_secondary_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/view_margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_wechat"/>

        <Button
            android:id="@+id/bt_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin_normal"
            android:text="@string/text_copy"
            android:textColor="@color/basic_secondary_text"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/view_margin_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_qq"/>

        <Button
            android:id="@+id/bt_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin_normal"
            android:text="@string/text_copy"
            android:textColor="@color/basic_secondary_text"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/view_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_margin_normal"
        android:text="使用过程中遇到问题、反馈与建议都可以在群里联系到我。同时资源更新、版本更新都会在群里发布公告，我承诺本 app 永不收费，持续为大家提供最新最热的影视资源。
喜欢的小伙伴记得加群哦。"/>

</LinearLayout>