<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <!--<include layout="@layout/include_empty_view"/>-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:fitsSystemWindows="true"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/basic_white"
            android:textSize="16sp"
            android:typeface="monospace"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_large"
        android:background="@color/basic_white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_with_color_mask"
            android:drawableEnd="@mipmap/ic_arrows_right"
            android:padding="@dimen/view_margin_large"
            android:text="@string/text_cache"/>

        <include layout="@layout/include_divide_line"/>

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_with_color_mask"
            android:drawableEnd="@mipmap/ic_arrows_right"
            android:padding="@dimen/view_margin_large"
            android:text="@string/text_chat_me"/>

        <include layout="@layout/include_divide_line"/>

        <TextView
            android:id="@+id/tv_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_with_color_mask"
            android:drawableEnd="@mipmap/ic_arrows_right"
            android:padding="@dimen/view_margin_large"
            android:text="@string/text_about_me"/>
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/view_margin_normal"
        android:textColor="@color/basic_third_text"
        android:textSize="@dimen/text_normal"/>

</LinearLayout>